# tt-metal

./: .clang-format-ignore  .clang-tidy  .codechecker.json  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .tsan.suppressions  CMakeLists.txt  CMakePresets.json  CODEOWNERS  METALIUM_GUIDE.md  README.md  analyze_all_reduce_writer_perf.py  buggy_tensor_1.pt  buggy_tensor_2.pt  buggy_tensor_3.pt  build_metal.sh  conftest.py  conv2d_repro.py  create_venv.sh  deit.py  extract_functions.py  fabric_write_viz.py  hackathon.md  input_channel_pcc_repro.py  install_dependencies.sh  llama_env  log.txt  lraspp.py  matmul_sandbox.py  mbv2.py  mesh_sandbox.py  mesh_sandbox_bs.py  mesh_sandbox_dram.py  mesh_sandbox_i.py  mm_hang.sh  mm_hanger.py  mnist_ttnn.py  nd_hang.py  (+31 more)
dependencies/: CMakeLists.txt  boost_assert.patch  boost_config.patch  boost_core.patch  boost_static_assert.patch  boost_throw_exception.patch  fmt.patch  magic_enum.patch
tt_metal/: CMakeLists.txt  host_api.hpp  sfpi-version.sh  test_example.cpp  test_ext.cpp  tt_metal.cpp
tt_metal/api/tt-metalium/: allocator.hpp  allocator_algorithm.hpp  allocator_types.hpp  bfloat16.hpp  buffer.hpp  build.hpp  command_queue.hpp  command_queue_common.hpp  command_queue_interface.hpp  control_plane.hpp  core_coord.hpp  cq_commands.hpp  dev_msgs.h  device.hpp  device_command.hpp  device_impl.hpp  device_pool.hpp  dispatch_core_manager.hpp  dispatch_settings.hpp  distributed.hpp  erisc_datamover_builder.hpp  fabric.hpp  fabric_edm_packet_header.hpp  fabric_host_interface.h  fabric_host_utils.hpp  fabric_types.hpp  global_circular_buffer_impl.hpp  hal.hpp  hal_types.hpp  host_api.hpp  host_api_capture_helpers.hpp  kernel.hpp  kernel_types.hpp  lightmetal_capture.hpp  lightmetal_capture_utils.hpp  lightmetal_replay.hpp  mesh_buffer.hpp  mesh_command_queue.hpp  mesh_config.hpp  mesh_coord.hpp  (+23 more)
tt_metal/common/: CMakeLists.txt  base.hpp  bfloat16.hpp  core_coord.cpp  core_coord.hpp  core_descriptor.cpp  float16.hpp  metal_soc_descriptor.cpp  metal_soc_descriptor.h  shape.cpp  test_common.hpp  thread_pool.cpp  thread_pool.hpp  work_split.cpp
tt_metal/core_descriptors/: blackhole_140_arch.yaml  wormhole_b0_80_arch.yaml
tt_metal/detail/: tt_metal.hpp  util.hpp
tt_metal/detail/reports/: memory_reporter.cpp
tt_metal/distributed/: CMakeLists.txt  coordinate_translation.cpp  coordinate_translation.hpp  distributed.cpp  distributed.hpp  fd_mesh_command_queue.cpp  fd_mesh_command_queue.hpp  mesh_buffer.cpp  mesh_buffer.hpp  mesh_command_queue.cpp  mesh_command_queue.hpp  mesh_device.cpp  mesh_device.hpp  mesh_device_view.cpp  mesh_device_view.hpp  mesh_socket_utils.cpp  mesh_trace.cpp  mesh_workload.cpp  mesh_workload.hpp  mesh_workload_utils.cpp  mesh_workload_utils.hpp  sd_mesh_command_queue.cpp  system_mesh.cpp
tt_metal/distributed/config/: 2xN300.json
tt_metal/examples/: CMakeLists.txt
tt_metal/examples/hello_world_compute_kernel/: CMakeLists.txt
tt_metal/experimental/: hal.cpp
tt_metal/fabric/: CMakeLists.txt  control_plane.cpp  erisc_datamover_builder.cpp  fabric.cpp  fabric_context.cpp  fabric_context.hpp  fabric_host_utils.cpp  fabric_host_utils.hpp  fabric_mux_config.hpp  mesh_graph.cpp  routing_table_generator.cpp
tt_metal/fabric/mesh_graph_descriptors/: p300_mesh_graph_descriptor.yaml
tt_metal/hostdevcommon/: CMakeLists.txt
tt_metal/hw/: CMakeLists.txt
tt_metal/hw/cmake/: sfpi-version.cmake
tt_metal/hw/firmware/: CMakeLists.txt
tt_metal/hw/inc/: circular_buffer.h  circular_buffer_init.h  common_defines.h  dataflow_api.h  dataflow_api_addrgen.h  dataflow_internal.h  dev_msgs.h  firmware_common.h  mod_div_lib.h  noc_non_blocking_api_common.h  remote_circular_buffer_api.h  risc_common.h  socket_api.h  tensix_functions.h
tt_metal/hw/toolchain/: erisc-b0-app-sections.ld  erisc-b0-app.ld  erisc-b0-kernel.ld  erisc-b0-memory.ld  main.ld  ncrisc-halt-wormhole.S  sections.ld  substitutes.cpp  tmu-crt0k-ncrisc.S
tt_metal/impl/: CMakeLists.txt
tt_metal/impl/allocator/: allocator.cpp  bank_manager.cpp  l1_banking_allocator.cpp
tt_metal/impl/buffers/: buffer.cpp  buffer_dispatch_utils.cpp  buffer_dispatch_utils.hpp  circular_buffer.cpp  circular_buffer.hpp  circular_buffer_types.cpp  circular_buffer_types.hpp  dispatch.cpp  dispatch.hpp  global_circular_buffer.cpp  global_circular_buffer.hpp  global_semaphore.cpp  semaphore.cpp
tt_metal/impl/context/: cpu_allocator.cpp  cpu_allocator.hpp  metal_context.cpp  metal_context.hpp
tt_metal/impl/data_format/: bfloat8.cpp
tt_metal/impl/debug/: debug_helpers.hpp  dprint_server.cpp  sanitize_noc_host.hpp  silicon_debugger_ifc.cpp  silicon_debugger_ifc.hpp  watcher_device_reader.cpp  watcher_device_reader.hpp  watcher_server.cpp
tt_metal/impl/device/: device.cpp  device.hpp  device_impl.hpp  device_pool.cpp
tt_metal/impl/dispatch/: command_queue.cpp  command_queue.hpp  command_queue_interface.hpp  cq_commands.hpp  data_collection.cpp  device_command.hpp  dispatch_core_common.hpp  dispatch_core_manager.cpp  dispatch_core_manager.hpp  dispatch_mem_map.cpp  dispatch_query_manager.cpp  dispatch_query_manager.hpp  hardware_command_queue.cpp  hardware_command_queue.hpp  host_runtime_commands.cpp  memcpy.hpp  program_command_sequence.hpp  simple_trace_allocator.cpp  simple_trace_allocator.hpp  system_memory_manager.cpp  system_memory_manager.hpp  topology.cpp  topology.hpp  (+1 more)
tt_metal/include/: compute_kernel_api.h
tt_metal/jit_build/: CMakeLists.txt  build.cpp  build.hpp  build_env_manager.cpp  data_format.cpp  genfiles.cpp  settings.cpp
tt_metal/llrt/: CMakeLists.txt  core_descriptor.cpp  get_platform_architecture.hpp  hal.cpp  hal.hpp  hal_asserts.hpp  llrt.cpp  llrt.hpp  rtoptions.cpp  rtoptions.hpp  sanitize_noc_host.hpp  tlb_config.cpp  tt_cluster.cpp  tt_cluster.hpp  tt_elffile.cpp  tt_elffile.hpp  tt_memory.cpp
tt_metal/programming_examples/: CMakeLists.txt
tt_metal/soc_descriptors/: blackhole_140_arch.yaml  blackhole_simulation_1x2_arch.yaml  wormhole_b0_versim.yaml
tt_metal/tools/: CMakeLists.txt  memset.cpp
tt_metal/tt_stl/: reflection.hpp
(+4012 files in other folders)
